--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,23 +1,40 @@
 {
-  "name": "ajo",
-  "version": "0.1.0",
-  "main": "index.js",
-  "author": "Mackyson",
-  "license": "MIT",
-  "dependencies": {
-    "@babel/core": "^7.6.4",
-    "@babel/preset-env": "^7.6.3",
-    "babel-plugin-transform-react-jsx": "^6.24.1",
-    "react": "^16.10.2",
-    "react-dom": "^16.10.2"
-  },
-  "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^8.0.6",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "webpack": "^4.41.1",
-    "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.8.2"
-  }
+	"name": "ajo",
+	"version": "0.1.0",
+	"main": "index.js",
+	"author": "Mackyson",
+	"license": "MIT",
+	"dependencies": {
+		"@babel/core": "^7.6.4",
+		"@babel/preset-env": "^7.6.3",
+		"babel-plugin-transform-react-jsx": "^6.24.1",
+		"bootstrap": "^4.3.1",
+		"react": "^16.10.2",
+		"react-bootstrap": "^1.0.0-beta.14",
+		"react-dom": "^16.10.2"
+	},
+	"devDependencies": {
+		"babel-core": "^6.26.3",
+		"babel-loader": "^8.0.6",
+		"babel-preset-env": "^1.7.0",
+		"babel-preset-react": "^6.24.1",
+		"eslint": "^6.5.1",
+		"eslint-config-prettier": "^6.4.0",
+		"eslint-plugin-prettier": "^3.1.1",
+		"eslint-plugin-react": "^7.16.0",
+		"husky": "^3.0.9",
+		"lint-staged": "^9.4.2",
+		"prettier": "^1.18.2",
+		"webpack": "^4.41.1",
+		"webpack-cli": "^3.3.9",
+		"webpack-dev-server": "^3.8.2"
+	},
+	"husky":{
+	"hooks":{
+		"precommit": "lint-staged"
+	}
+	},
+	"lint-staged":{
+	".{js,jsx}": ["eslint --fix"]
+	}
 }
