--- a/frontend/.prettierrc
+++ b/frontend/.prettierrc
@@ -1,8 +1,9 @@
 {
 	"printWidth": 120,
 	"useTabs": true,
-	"semi": true,
+	"semi": false,
 	"singleQuote": false,
+	"jsxSingleQuote": false,
 	"trailingComma": "es5",
 	"bracketSpacing": true,
 	"jsxBracketSameLine": false
