--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,12 @@
 		"bootstrap": "^4.3.1",
 		"react": "^16.10.2",
 		"react-bootstrap": "^1.0.0-beta.14",
-		"react-dom": "^16.10.2"
+		"react-dom": "^16.10.2",
+		"typescript": "^3.6.4"
 	},
 	"devDependencies": {
+		"@typescript-eslint/eslint-plugin": "^2.4.0",
+		"@typescript-eslint/parser": "^2.4.0",
 		"babel-core": "^6.26.3",
 		"babel-loader": "^8.0.6",
 		"babel-preset-env": "^1.7.0",
@@ -29,12 +32,15 @@
 		"webpack-cli": "^3.3.9",
 		"webpack-dev-server": "^3.8.2"
 	},
-	"husky":{
-	"hooks":{
-		"precommit": "lint-staged"
-	}
+	"husky": {
+		"hooks": {
+			"pre-commit": "lint-staged"
+		}
 	},
-	"lint-staged":{
-	".{js,jsx}": ["eslint --fix"]
+	"lint-staged": {
+		"*.{js,jsx,ts,tsx}": [
+			"eslint --fix",
+			"git add"
+		]
 	}
 }
