--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,14 @@
 		"@babel/preset-env": "^7.6.3",
 		"babel-plugin-transform-react-jsx": "^6.24.1",
 		"bootstrap": "^4.3.1",
+		"material-ui": "^0.20.2",
 		"react": "^16.10.2",
 		"react-bootstrap": "^1.0.0-beta.14",
 		"react-dom": "^16.10.2",
 		"typescript": "^3.6.4"
 	},
 	"devDependencies": {
+		"@babel/plugin-proposal-class-properties": "^7.5.5",
 		"@typescript-eslint/eslint-plugin": "^2.4.0",
 		"@typescript-eslint/parser": "^2.4.0",
 		"babel-core": "^6.26.3",
