--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,9 +7,10 @@
 	"dependencies": {
 		"@babel/core": "^7.6.4",
 		"@babel/preset-env": "^7.6.3",
+		"@material-ui/core": "^4.5.1",
+		"axios": "^0.19.0",
 		"babel-plugin-transform-react-jsx": "^6.24.1",
 		"bootstrap": "^4.3.1",
-		"material-ui": "^0.20.2",
 		"react": "^16.10.2",
 		"react-bootstrap": "^1.0.0-beta.14",
 		"react-dom": "^16.10.2",
