--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
           - DB_USER=root
           - DB_PASSWORD=root
         volumes:
-          - ./backend:/go/src/app/
+          - ./:/go/src/app/
 
     db:
         image: mysql
